syntax = "proto3";

message User{
  string loginName = 1;
  string realName = 2;
  string password = 3;
  string oldLoginName = 4;
}

message LookUpUserId{
  int32 userID = 1;
}

message LookUpLoginName{
  string loginName = 1;
}

message DeleteUserName{
  string loginName = 1;
  string password = 2;
}

message NewUserId{
  int32 userID = 1;
  bool alreadyExist = 2;
}

message ModifyUser{
  string loginName = 1;
  bool alreadyExist = 2;
  bool isDeleted = 3;
  bool isPassMatch = 4;
}

message DeleteUser{
  string loginName = 1;
  bool alreadyExist = 2;
  bool isDeleted = 3;
  bool isPassMatch = 4;
}

message EmptyRequest{}

message HelpResponse{
  string helpMessage = 1;
}

message AllInfoPrint{
  string allInfoPrint = 1;
}

message UserIdsPrint{
  string userIdsPrint = 1;
}

message UserLoginsPrint{
  string userLoginsPrint = 1;
}

message IsUserExist{
  bool isUserExist = 1;
  string printMessage = 2;
}

service UserAuthenticationService{
  rpc create(User) returns (NewUserId);
  rpc modify(User) returns (ModifyUser);
  rpc delete(DeleteUserName) returns(DeleteUser);
  rpc lookup(LookUpLoginName) returns(IsUserExist);
  rpc reverseLookup(LookUpUserId) returns(IsUserExist);
  rpc listLogins(EmptyRequest) returns (UserLoginsPrint);
  rpc listIds(EmptyRequest) returns (UserIdsPrint);
  rpc listAllInfo(EmptyRequest) returns (AllInfoPrint);
  rpc help(EmptyRequest) returns (HelpResponse);
}